# Waste_Classification_IWMS_Using_YoloV8

./: .gitignore  image.py  img-test.py  main.py  notes.txt  pyproject.toml  train-model.py  webcam-test.py  webcam.py
